Fix Homepage hero content shift

--- a/resources/sass/helpers/_helpers.scss
+++ b/resources/sass/helpers/_helpers.scss
@@ -9,3 +9,7 @@
 .page-message {
     transition: all .3s;
 }
+
+.min-h-75vh {
+    min-height: 75vh;
+}
